# pressure-ui

./: CONTRIBUTING.md  Makefile  README.md  app.py  debugger.py  main.py  pyproject.toml  requirements.txt  settings.json
.github/workflows/: ci.yml
core/: detector.py  directory.py  logger.py
core/config/: setting.py
core/hardware/: debugger.py  detector.py
core/interface/: charts.py  form.py  trials.py
core/logging/: logger.py
core/utils/: directory.py  generator.py  mock_data.py
data/Brad/TRIAL_1_LOC_1_LUMP/: CLEAN_TRIAL_1_LOC_1_LUMP.csv  RAW_TRIAL_1_LOC_1_LUMP.csv
data/Brad/TRIAL_1_LOC_1_NOLUMP/: CLEAN_TRIAL_1_LOC_1_NOLUMP.csv  RAW_TRIAL_1_LOC_1_NOLUMP.csv
data/Chini/TRIAL_1_LOC_1_LUMP/: CLEAN_TRIAL_1_LOC_1_LUMP.csv  RAW_TRIAL_1_LOC_1_LUMP.csv
data/Chini/TRIAL_1_LOC_1_NOLUMP/: CLEAN_TRIAL_1_LOC_1_NOLUMP.csv  RAW_TRIAL_1_LOC_1_NOLUMP.csv
data/Test_2/TRIAL_1_LOC_1_LUMP/: CLEAN_TRIAL_1_LOC_1_LUMP.csv  RAW_TRIAL_1_LOC_1_LUMP.csv
data/Test_51/TRIAL_1_LOC_1_LUMP/: CLEAN_TRIAL_1_LOC_1_LUMP.csv  RAW_TRIAL_1_LOC_1_LUMP.csv
data/Test_51/TRIAL_1_LOC_1_NOLUMP/: CLEAN_TRIAL_1_LOC_1_NOLUMP.csv  RAW_TRIAL_1_LOC_1_NOLUMP.csv
data/Test_51/TRIAL_1_LOC_2_LUMP/: CLEAN_TRIAL_1_LOC_2_LUMP.csv  RAW_TRIAL_1_LOC_2_LUMP.csv
data/Test_51/TRIAL_1_LOC_2_NOLUMP/: CLEAN_TRIAL_1_LOC_2_NOLUMP.csv  RAW_TRIAL_1_LOC_2_NOLUMP.csv
data/Test_51/TRIAL_1_LOC_3_LUMP/: CLEAN_TRIAL_1_LOC_3_LUMP.csv  RAW_TRIAL_1_LOC_3_LUMP.csv
docs/: ARCHITECTURE.md  installation.md  mock.md  usage.md  visualisation.md
tests/: test_generator.py
(+36 files in other folders)
